[package]
name = "ticker"
version = "0.1.0"
authors = ["Edward Vear <edwardvear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9"
termion = "1.5"
tokio= { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
reqwest = { version = "0.10.6", features = ["json", "blocking"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
